--- a/Веб-разработка/8.Презентация к дипломного проекта/презентация.md
+++ b/Веб-разработка/8.Презентация к дипломного проекта/презентация.md
@@ -1,1 +1,1 @@
-![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B41.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B42.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B43.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B44.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B45.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B46.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B47.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B48.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B49.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B410.JPG)
+![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B41-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B42-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B43-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B44-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B45-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B46-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B47-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B48-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B49-1.JPG) ![Alt text](%D0%A1%D0%BB%D0%B0%D0%B9%D0%B410-1.JPG)
